--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "DesignToken"
 version = "0.1.0"
-authors = ["Simon Palmer <hello@near.org>"]
+authors = ["Simon Palmer <hello@near.org>, Lev Stambler <levstamb@gmail.com>"]
 edition = "2018"
 
 [lib]
