--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   },
   "dependencies": {
     "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.5.3",
     "ipfs-api": "^26.1.2",
     "isotope-layout": "^3.0.6",
@@ -41,7 +45,8 @@
     "react": ">=16.8.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": ">=16.8.0",
-    "regenerator-runtime": "~0.13.5"
+    "regenerator-runtime": "~0.13.5",
+    "typescript": "^4.1.3"
   },
   "jest": {
     "moduleNameMapper": {
