--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "~7.12.3",
     "@babel/preset-env": "~7.12.1",
     "@babel/preset-react": "~7.12.5",
+    "@types/store": "^2.0.2",
     "babel-jest": "~26.6.2",
     "env-cmd": "~10.1.0",
     "gh-pages": "~3.1.0",
@@ -32,6 +33,8 @@
     "shelljs": "~0.8.4"
   },
   "dependencies": {
+    "3id-did-provider": "^0.5.0",
+    "@ceramicnetwork/http-client": "^0.9.6",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
@@ -41,11 +44,13 @@
     "ipfs-api": "^26.1.2",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.5.1",
+    "key-did-provider-ed25519": "^1.0.0",
     "near-api-js": "~0.35.0",
     "react": ">=16.8.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": ">=16.8.0",
     "regenerator-runtime": "~0.13.5",
+    "store": "^2.0.12",
     "typescript": "^4.1.3"
   },
   "jest": {
