--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "near-cli": "~1.4.0",
     "nodemon": "~2.0.3",
     "parcel-bundler": "~1.12.4",
+    "parcel-plugin-wasm.rs": "^1.3.0",
     "react-test-renderer": "~17.0.1",
     "shelljs": "~0.8.4"
   },
