--- a/package.json
+++ b/package.json
@@ -37,20 +37,24 @@
     "3id-did-provider": "^0.5.0",
     "@ceramicnetwork/http-client": "^0.9.6",
     "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@stablelib/ed25519": "^1.0.1",
+    "@textile/hub": "^6.0.2",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.5.3",
+    "did-jwt": "^4.8.1",
     "ipfs-api": "^26.1.2",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.5.1",
-    "key-did-provider-ed25519": "^1.0.0",
+    "key-did-provider-ed25519": "https://github.com/Sladuca/key-did-provider-ed25519",
     "near-api-js": "~0.35.0",
     "react": ">=16.8.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": ">=16.8.0",
     "regenerator-runtime": "~0.13.5",
+    "rpc-utils": "^0.2.0",
     "store": "^2.0.12",
     "typescript": "^4.1.3"
   },
