--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.cache
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # Developer note: near.gitignore will be renamed to .gitignore upon project creation
 # dependencies
