--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build:contract:debug": "node contract/compile.js --debug",
     "build:web": "parcel build src/index.html --public-url ./",
     "dev:deploy:contract": "near dev-deploy && npm run dev:deploy:init",
-    "dev:deploy:init": "env-cmd -f ./neardev/dev-account.env --use-shell 'echo $CONTRACT_NAME && near call --accountId furball.sladuca.testnet $CONTRACT_NAME new'",
+    "dev:deploy:init": "env-cmd -f ./neardev/dev-account.env --use-shell 'echo $CONTRACT_NAME && near call --accountId levl.testnet $CONTRACT_NAME new'",
     "deploy:contract": "near deploy",
     "deploy:pages": "gh-pages -d dist/",
     "deploy": "npm run build && npm run deploy:contract && npm run deploy:pages",
-    "prestart": "node scripts/fix-multicodec.js && npm run build:contract:debug && npm run dev:deploy:contract",
+    "prestart": "node scripts/fix-multicodec.js && npm run build:contract:debug",
     "start": "env-cmd -f ./neardev/dev-account.env parcel src/index.html",
     "dev": "nodemon --watch contract/src -e rs --exec \"npm run start\"",
     "test": "npm run build:contract:debug && cd contract && cargo test -- --nocapture && cd .. && jest test --runInBand"
@@ -50,22 +50,22 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.5.3",
+    "brace-expansion": "^2.0.0",
     "did-jwt": "^4.8.1",
+    "ipfs-http-client": "^49.0.2",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.5.1",
     "key-did-provider-ed25519": "https://github.com/Sladuca/key-did-provider-ed25519",
-    "brace-expansion": "^2.0.0",
-    "ipfs-api": "^26.1.2",
     "multicodec": "^2.1.0",
     "near-api-js": "~0.35.0",
     "react": ">=16.8.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": ">=16.8.0",
+    "react-dropzone": "^11.3.1",
+    "regenerator-runtime": "^0.13.7",
     "rpc-utils": "^0.2.0",
     "store": "^2.0.12",
-    "typescript": "^4.1.3",
-    "react-dropzone": "^11.3.1",
-    "regenerator-runtime": "^0.13.7"
+    "typescript": "^4.1.3"
   },
   "jest": {
     "moduleNameMapper": {
