--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:contract:debug": "node contract/compile.js --debug",
     "build:web": "parcel build src/index.html --public-url ./",
     "dev:deploy:contract": "near dev-deploy && npm run dev:deploy:init",
-    "dev:deploy:init": "env-cmd -f ./neardev/dev-account.env --use-shell 'echo $CONTRACT_NAME && near call --accountId levl.testnet $CONTRACT_NAME new'",
+    "dev:deploy:init": "env-cmd -f ./neardev/dev-account.env --use-shell 'echo $CONTRACT_NAME && near call --accountId furball.sladuca.testnet $CONTRACT_NAME new'",
     "deploy:contract": "near deploy",
     "deploy:pages": "gh-pages -d dist/",
     "deploy": "npm run build && npm run deploy:contract && npm run deploy:pages",
@@ -35,7 +35,6 @@
     "shelljs": "~0.8.4"
   },
   "dependencies": {
-    "3id-did-provider": "^0.5.0",
     "@ceramicnetwork/http-client": "^0.9.6",
     "@ceramicstudio/idx": "^0.7.0",
     "@material-ui/core": "^4.11.3",
@@ -49,6 +48,8 @@
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "3id-did-provider": "^0.5.0",
     "bootstrap": "^4.5.3",
     "brace-expansion": "^2.0.0",
     "did-jwt": "^4.8.1",
@@ -62,6 +63,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": ">=16.8.0",
     "react-dropzone": "^11.3.1",
+    "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7",
     "rpc-utils": "^0.2.0",
     "store": "^2.0.12",
