--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "~7.12.3",
     "@babel/preset-env": "~7.12.1",
     "@babel/preset-react": "~7.12.5",
+    "@types/bl": "^2.1.0",
     "@types/store": "^2.0.2",
     "babel-jest": "~26.6.2",
     "env-cmd": "~10.1.0",
@@ -56,7 +57,6 @@
     "isotope-layout": "^3.0.6",
     "jquery": "^3.5.1",
     "key-did-provider-ed25519": "https://github.com/Sladuca/key-did-provider-ed25519",
-    "multicodec": "^2.1.0",
     "near-api-js": "~0.35.0",
     "react": ">=16.8.0",
     "react-bootstrap": "^1.4.3",
